# ax-gateway

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  ax_listener.py  echo_agent.py  pyproject.toml
.github/workflows/: ci.yml  operator-qa.yml  publish.yml  release-please.yml
ax_cli/: __init__.py  avatar.py  client.py  config.py  gateway.py  gateway_runtime_types.py  main.py  mentions.py  output.py  token_cache.py
ax_cli/commands/: agents.py  alerts.py  apps.py  assign.py  auth.py  bootstrap.py  channel.py  context.py  credentials.py  events.py  gateway.py  handoff.py  keys.py  listen.py  messages.py  mint.py  profile.py  qa.py  reminders.py  spaces.py  tasks.py  upload.py  watch.py
ax_cli/runtimes/: __init__.py
ax_cli/static/: demo.html
channel/: .mcp.json  README.md  package.json  server.ts
docker/: ax-channel.Dockerfile
docs/: agent-authentication.md  credential-security.md  gateway-agent-runtimes.md  gateway-demo-script.md  login-e2e-runbook.md  mcp-app-signal-adapter.md  mcp-headless-pat.md  mcp-remote-oauth.md  operator-qa-runbook.md  reminder-lifecycle.md
examples/codex_gateway/: codex_bridge.py
examples/gateway_ollama/: ollama_bridge.py
examples/gateway_probe/: probe_bridge.py
examples/hermes_sentinel/: README.md  hermes_bridge.py
scripts/: channel_smoke.py  ci-check.sh
skills/: SKILL.md
skills/gateway-agent-setup/: SKILL.md
skills/gateway-pass-through-agent/: SKILL.md
specs/: README.md
tests/: conftest.py  test_agents_commands.py  test_agents_placement.py  test_agents_test_invoking_principal.py  test_alerts_commands.py  test_apps_commands.py  test_auth_commands.py  test_auth_doctor_gateway_managed.py  test_avatar_day.py  test_bootstrap_agent.py  test_channel.py  test_client.py  test_codex_gateway_bridge.py  test_config.py  test_context_commands.py  test_context_promote.py  test_credentials_commands.py  test_doctor_probe_and_recovery.py  test_gateway_commands.py  test_gateway_directory_chmod.py  test_gateway_log_timestamps.py  test_gateway_ollama_bridge.py  test_gateway_placement_event.py  test_gateway_probe_bridge.py  test_gateway_runtime_install.py  test_handoff.py  test_mentions.py  test_messages.py  test_messages_command.py  test_mint_command.py  test_qa_contracts.py  test_reminders_commands.py  test_send_delivery_context.py  test_spaces_commands.py  test_tasks_commands.py  test_token_cache.py  test_upload.py
(+47 files in other folders)
