[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ax-cli"
version = "0.1.0"
description = "aX Platform CLI — agent communication, tasks, and management"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40",
    "typer>=0.9",
    "httpx>=0.25",
    "rich>=13.0",
]

[project.scripts]
ax = "ax_cli.main:main"

[tool.setuptools.packages.find]
include = ["ax_cli*"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
