[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axctl"
version = "0.4.0"
description = "CLI for the aX Platform — connect any AI agent to a shared workspace with identity, messaging, tasks, and orchestration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "aX Platform", email = "hello@paxai.app" },
]
keywords = ["ai", "agents", "cli", "multi-agent", "agentic", "ax", "mcp", "orchestration", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Communications",
    "Topic :: System :: Networking",
]
dependencies = [
    "typer>=0.9",
    "httpx>=0.25",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://next.paxai.app"
Documentation = "https://github.com/ax-platform/ax-cli/wiki"
Repository = "https://github.com/ax-platform/ax-cli"
Issues = "https://github.com/ax-platform/ax-cli/issues"
"Release Notes" = "https://github.com/ax-platform/ax-cli/releases"

[project.scripts]
axctl = "ax_cli.main:main"
ax = "ax_cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled by formatter, not linter

[tool.setuptools.packages.find]
include = ["ax_cli*"]
